tests/src/frontend/typechecking/invalid/pipe_1.sk
fun foo(Int, Int): void {
  void
}

fun bar(): void {
  (1, 2) |> foo
}
